--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <meta name="twitter:card" content="summary">
 <meta property="twitter:title" content="Download DnsUpdater Desktop">
 <script type="application/ld+json">
-{"@context":"https://schema.org","@type":"WebPage","description":"Simple collaboration from your desktop","headline":"Download DnsUpdater Desktop","url":"https://desktop.DnsUpdater.com/download/"}</script>
+{"@context":"https://schema.org","@type":"WebPage","description":"Simple DNS Software from your desktop","headline":"Download DnsUpdater Desktop","url":"https://desktop.DnsUpdater.com/download/"}</script>
 <!-- End Jekyll SEO tag -->
 
 </head>
