--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 
   <link rel="stylesheet" type="text/css" href="./index/styles.css">
 
-  <link rel="icon" sizes="any" mask="" href="https://DnsUpdater.DnsUpdaterassets.com/pinned-octocat.svg">
-  <link rel="icon" type="image/x-icon" href="https://DnsUpdater.DnsUpdaterassets.com/favicon.ico">
+  <link rel="icon" sizes="any" mask="" href="icon.ico">
+  <link rel="icon" type="image/x-icon" href="icon.ico">
 
   <script src="./index/os.js.téléchargement" charset="utf-8"></script>
 
